@@ -1,6 +1,9 @@
-AUX assemble-plexus-resources.sh 447 RMD160 0a5ca12ed4caa02aeb9a634d5e86e1f2784282f0 SHA1 f4cdc9ee43b96bf5a919991b2a7573d6bd568f4e SHA256 8163e1f18a18df3b58b499047b572b9b6d7a387b2013d4c4632d0549d2ab1e04
+AUX assemble-plexus-resources.sh 746 RMD160 1a5a9579e01baeee8968f870e77150b91b781935 SHA1 6af5a222b4d895a8d55ca7d055ca61cd2bc2d472 SHA256 0559e1bf6d413609202aba42f8046b167dcb285d65cdc6c01374ea14a5587bc5
+DIST doxia-1.0_alpha8_pre20070617-gen-src.tar.bz2 11586 RMD160 affd572eeb54f14d4742d2ba2c449e15bd798330 SHA1 a924d554b026464f9d24b0f4af5c5611e7d75a3f SHA256 036803b472e46026daba17ab9c6034a12104396a7550ac2c260ae2d2a0518485
+DIST doxia-1.0_alpha8_pre20070617.tar.bz2 447974 RMD160 8c2ee0b2d39d3f6c9ac8fafda0c94f12ab192b4c SHA1 5602ef4962f734b3e86ff559e01004d97241344b SHA256 35d2bcc73794cb069109b0ffa448d5e49a6bc0f20bdb643556641518d5738294
 DIST doxia-1.0_alpha9_pre20070611-gen-src.tar.bz2 1673 RMD160 4e294a7401fc57f13850fb6a4faf891d6a3c83d5 SHA1 a11a55f1adfdd2aa95358aa5e981bf5a090b1df8 SHA256 753e165c1ca583de3f0e4c1437c0b70aa207c5965078b7c5f49d2fdd2cb5f55f
 DIST doxia-1.0_alpha9_pre20070611.tar.bz2 649841 RMD160 0bf2e56bb1ed9f85b984dc64e7d1947dfa6dcf68 SHA1 f7df596e6d60e1e9eede424169e2c81bd380df54 SHA256 4d14d3bdbd6759255a8345071f77f799b749b5ff3f5a63715c629df38a38dda3
+EBUILD doxia-1.0_alpha8_pre20070617.ebuild 1247 RMD160 4551df5c09eb6b45d6d9377343ab96662fb64e8a SHA1 d621e86b06f028304621a1b27317f49a98d30bfa SHA256 1f14cf10a3301100c76213e8d685dbaeb4feae6fde929a6acf2b6d4dd09d026a
 EBUILD doxia-1.0_alpha9_pre20070611.ebuild 1464 RMD160 10e25efdec7aaa0ba4dea0cf4ffd55ac58adfa99 SHA1 56269c9d12c370e1c694968813f38b204895f749 SHA256 88833f8e1f0efb373998708eb1496487f5a9d5155ba21b723e341313ea953070
-MISC ChangeLog 682 RMD160 ade1c0b11b6802f3094b879ba9d20b7f271526c8 SHA1 578b25bf5fa153d99d2bb6ba63f9cedd88b12a7c SHA256 9f3c67e301a9b0eecefb36f8f0723ca4b55fb7104517f299bd03018af4b7e12a
+MISC ChangeLog 844 RMD160 3da7caaefa65cdd88fabe1e6ca34bdce7f5dad81 SHA1 5b244f8f02b387eeeb5d83af18818a9c1ace7bd0 SHA256 a4192c755a326370d079b26bde79bcd852b687a100b00cdc1725465dd895c140
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
