@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Jun 2007; kiorky <kiorky@cryptelium.net>
+  +doxia-1.0_alpha8_pre20070617.ebuild, files/assemble-plexus-resources.sh:
+  resurrecting alpha8 for maven shared
+
   11 Jun 2007; kiorky <kiorky@cryptelium.net> -doxia-1.0.ebuild,
   +doxia-1.0_alpha9_pre20070611.ebuild, +files/assemble-plexus-resources.sh:
   Maven 2.1 Bump
